[package]
name = "soh"
version = "0.2.0"
authors = ["Christopher Flynn <crf204@gmail.com>"]
edition = "2018"

[dependencies]
clap = {version = "~2.33.0", features = ["yaml"]}
uuid = {version = "0.8.1", features = ["v1", "v3", "v4", "v5", "serde"] }
clipboard = "0.5.0"
colored = "1.8"
mac_address = "1.0.3"
base64 = "0.11.0"
sys-info = "0.5.8"
reqwest = { version = "0.10", features = ["blocking", "json"] }
rand = "0.7.3"
chrono = "0.4"
chrono-tz = "0.5"
serde_json = "1.0"
serde = "1.0.104"
# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = "0.9.54"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]