[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "soh"
version = "0.1.0"
description = ""
authors = ["flynn <crf204@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
pyperclip = "^1.7"
requests = "^2.21"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pytest = "^4.4"
pytest-cov = "^2.6"
pytest-xdist = "^1.28"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

